--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.5
+  google_mobile_ads: ^3.0.0
   image_gallery_saver: ^1.7.1
   image_picker: ^0.8.6
 
